<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BLE Music Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player">Player Mode</string>
    <string name="title_activity_controller">Controller Mode</string>
    
    <string name="player">Player</string>
    <string name="controller">Controller</string>
    <string name="player_mode">Player Mode</string>
    <string name="controller_mode">Controller Mode</string>
    <string name="disconnect">Disconnect</string>
    
    <string name="minus">-</string>
    <string name="rewind">|&lt;&lt;</string>
    <string name="play_pause">&gt;</string>
    <string name="forward">&gt;&gt;|</string>
    <string name="plus">+</string>
    
    <string name="show_log">Show Log</string>
    
    <string name="advertising">Waiting connection from controller...</string>
    <string name="scanning">Scanning player...</string>
    
    <string name="no_devices_found">No devices found.</string>
    <string name="select_device">Select device</string>
    <string name="device_disconnected">Device disconnected.</string>
    
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="done">Done</string>
    
    <string name="devices_found">device(s) found.</string>

</resources>
