<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.nita.blemusicremote.PlayerActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1,2,3,4" >

        <TableRow>
            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus" />
            <Button
                android:id="@+id/button_rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewind" />
            <Button
                android:id="@+id/button_play_plause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_pause" />
            <Button
                android:id="@+id/button_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward" />
            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus" />
        </TableRow>
    </TableLayout>

</RelativeLayout>