<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.nita.blemusicremote.ControllerActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/view_padding" >

        <TableRow>

            <Space />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@drawable/blue_button"
                android:text="@string/plus" />

            <Space />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_rewind"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@drawable/blue_button"
                android:text="@string/rewind" />

            <Button
                android:id="@+id/button_play_plause"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@drawable/blue_button"
                android:text="@string/play_pause" />

            <Button
                android:id="@+id/button_forward"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@drawable/blue_button"
                android:text="@string/forward" />
        </TableRow>

        <TableRow>

            <Space />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@drawable/blue_button"
                android:text="@string/minus" />

            <Space />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tablelayout_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aquablue"
                android:padding="@dimen/view_padding"
                android:text="@string/player" />

            <TextView
                android:id="@+id/textview_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/view_padding" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aquablue"
                android:padding="@dimen/view_padding"
                android:text="@string/controller" />

            <TextView
                android:id="@+id/textview_controller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/view_padding" />
        </TableRow>
    </TableLayout>

</RelativeLayout>